src/Layout/Layout.scss
/** @format */

@use "../App.scss";

.mainLayout {
  width: 100vw;
  height: 100vh;
  display: flex;
  overflow: hidden;

  .OutletContainer {
    width: calc(100vw - 70px);
    height: 100vh;
    overflow-y: scroll;
    box-sizing: border-box;
    z-index: 1;
    scroll-behavior: smooth;
    overscroll-behavior-y: none;
  }
}

@media screen and (max-width: App.$mobile) {
  .mainLayout {
    .OutletContainer {
      width: 100vw;
      height: calc(100vh);
      padding: 47px 0 150px 0;
    }
  }
}

